<resources>
    <string name="app_name">EBills</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="item_name">Item Name</string>
    <string name="hint_item_name">Enter Name</string>
    <string name="item_description">Item Description</string>
    <string name="hint_item_description">Enter Description</string>
    <string name="item_invoice">Invoice No.</string>
    <string name="hint_invoice_number">Enter Invoice No.</string>
    <string name="item_order_name">Order No.</string>
    <string name="hint_order_no">Enter Order No.</string>
    <string name="item_amount">Amount</string>
    <string name="hint_amount">Enter Amount</string>
    <string name="item_tags">Tags</string>
    <string name="hint_tags">Enter Tags</string>
</resources>
