<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:text="Enter Item Details" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/item_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_name"
        android:layout_marginBottom="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/item_description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_description"
        android:layout_marginBottom="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_invoice"
        style="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/invoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_invoice_number"
        android:layout_marginBottom="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:inputType="number"
        android:text="@string/item_order_name" />

    <EditText
        android:id="@+id/orderNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_order_no"
        android:layout_marginBottom="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_amount"
        style="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        style="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:text="@string/item_tags" />

    <EditText
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tags"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="Submit Item"
        android:layout_gravity="center_horizontal" />

</LinearLayout>